# fastapi-pg-boilerplate

./: .env.local  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  prepare.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 283a5af17901_init.py
app/: main.py
app/configs/: __init__.py  core.py  database.py
app/database/: __init__.py  constants.py  core.py  events.py
app/errors/: error_handlers.py
app/middlewares/: __init__.py  request_middlewares.py
app/models/: address.py  base.py  brand.py  business.py  category.py  product.py  service.py  tag.py  user.py
app/routers/: __init__.py  auth_router.py  health_routes.py  user_routes.py
app/schemas/: base.py  common.py  enums.py  request.py  response.py  user.py
app/services/: auth_service.py  health_service.py  user_service.py
app/utils/: cache.py  core.py  errors.py  lifespan.py  request.py  security.py
keys/: es256-private.pem  es256-public.pem
